Deleting rigid body deletes object that is not selected but leaves the one that you tried to delete #77181

Closed
opened 2020-05-29 23:23:34 +02:00 by Artturi Mäntysaari · 11 comments

System Information
Operating system: !in 10
Graphics card: gtx 960 4gb

Blender Version
Broken:
2.82a
2.83.0 691a1e3357 (2020-05-29 17:42)
2.90.0 2ee94c954d (2020-05-29 18:08)

Short description of error
You have a setup where you are having a big amount of rigid bodies. You play the animation until you have a good distribution of objects for your render and you try to delete one that is artistically in bad location. Blender doesn't allow you to delete it. Instead it is deleting something that you didn't select. See this video where I am trying to delete rigid bodies.

deleting_rigid_bodies.mp4

The problem doesn't occur at the first frame of the animation.

Exact steps for others to reproduce the error
Create a blend file with big amount of duplicated rigid bodies. Play animation little forward. Try to delete one of the rigid bodies.

Or

  1. Download the file attached below.
  2. Press play on the timeline to run the simulation.
  3. Stop the simulation at a frame like 50 and start deleting some of the cubes. Notice how in most situations the cube deleted is not the one selected.
  4. If you then go back to the first frame, you'll notice that the cubes you selected and deleted are actually the ones deleted.
    #77181 - Rigid Body.blend
**System Information** Operating system: !in 10 Graphics card: gtx 960 4gb **Blender Version** Broken: 2.82a 2.83.0 691a1e3357 (2020-05-29 17:42) 2.90.0 2ee94c954d (2020-05-29 18:08) **Short description of error** You have a setup where you are having a big amount of rigid bodies. You play the animation until you have a good distribution of objects for your render and you try to delete one that is artistically in bad location. Blender doesn't allow you to delete it. Instead it is deleting something that you didn't select. See this video where I am trying to delete rigid bodies. [deleting_rigid_bodies.mp4](https://archive.blender.org/developer/F8564186/deleting_rigid_bodies.mp4) The problem doesn't occur at the first frame of the animation. **Exact steps for others to reproduce the error** Create a blend file with big amount of duplicated rigid bodies. Play animation little forward. Try to delete one of the rigid bodies. Or 1. Download the file attached below. 2. Press play on the timeline to run the simulation. 3. Stop the simulation at a frame like 50 and start deleting some of the cubes. Notice how in most situations the cube deleted is not the one selected. 4. If you then go back to the first frame, you'll notice that the cubes you selected and deleted are actually the ones deleted. [#77181 - Rigid Body.blend](https://archive.blender.org/developer/F8563886/T77181_-_Rigid_Body.blend)

Added subscriber: @ArtturiMantysaari

Added subscriber: @ArtturiMantysaari
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I'm able to reproduce in 2.82a, 2.83.0 691a1e3357 (2020-05-29 17:42), and 2.90.0 2ee94c954d (2020-05-29 18:08).

Sorry if these are the incorrect project tags.

Not sure if this is a known issue.

I will update the description of your task to include a file and exact steps.

I'm able to reproduce in 2.82a, 2.83.0 `691a1e3357` (2020-05-29 17:42), and 2.90.0 `2ee94c954d` (2020-05-29 18:08). Sorry if these are the incorrect project tags. Not sure if this is a known issue. I will update the description of your task to include a file and exact steps.

Added subscriber: @mont29

Added subscriber: @mont29

This is a simulation issue, deleting the object does remove it from the rigid body world, but that one is not updating itself, so all displayed simulated objects after the deleted one shift one position...

Not sure whether simulation itself should support that kind of behavior, or if we should invalidate the whole cached simulation on such operations?

This is a simulation issue, deleting the object does remove it from the rigid body world, but that one is not updating itself, so all displayed simulated objects after the deleted one shift one position... Not sure whether simulation itself should support that kind of behavior, or if we should invalidate the whole cached simulation on such operations?
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

This is a bug, but fixing it requires some more design work as @mont29 said. It's unlikely that someone will work on this soon.

This is a bug, but fixing it requires some more design work as @mont29 said. It's unlikely that someone will work on this soon.

This issue was referenced by f20f82ce3e

This issue was referenced by f20f82ce3ee55c12adcec024e0133e71183e07b3

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sebastian Parborg self-assigned this 2020-09-02 18:35:34 +02:00

Just a heads up:

This is now fixed for non baked caches.

The issue is that the object order in the object array shifts around when deleting objects.
(The object that is deleted swaps positions with the last object in the array)

Supporting this kind of reorder might be tricky on the cache side, especially on undo.

Just a heads up: This is now fixed for non baked caches. The issue is that the object order in the object array shifts around when deleting objects. (The object that is deleted swaps positions with the last object in the array) Supporting this kind of reorder might be tricky on the cache side, especially on undo.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77181
No description provided.